[package]
name = "typical90"
version = "0.1.0"
edition = "2021"

# dependencies added to new project
[dependencies]
# proconio = "*"
# competitive = { git = "https://github.com/tanakh/competitive-rs.git" }
num = "0.4.0"
num-bigint = "0.4.3"
num-complex = "0.4.0"
num-integer = "0.1.42"
num-iter = "0.1.40"
num-rational = "0.4.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
ndarray = "0.15.4"
nalgebra = "0.29.0"
alga = "0.9.3"
libm = "0.2.1"
rand = { version = "0.8.4", features = ["small_rng"] }
getrandom = "0.2.3"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
rand_hc = "0.3.1"
rand_pcg = "0.3.1"
rand_distr = "0.4.2"
petgraph = "0.6.0"
indexmap = "1.3.2"
regex = "1.3.6"
lazy_static = "1.4.0"
ordered-float = "2.8.0"
ascii = "1.0.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.10.1"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.5.3"
im-rc = "15.0.0"
fixedbitset = "0.4.0"
bitset-fixed = "0.1.0"
proconio = { version = "*", features = ["derive"] }
text_io = "0.1.8"
whiteread = "0.5.0"
rustc-hash = "1.1.0"
smallvec = "1.2.0"

[profile.release]
lto = true
panic = 'abort'
